tests/spec/emit/snapshots/result_assignment_from_function_call.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn get_value() -> Result<int, string> {
    Ok(42)
  }
  
  fn test() {
    let mut res: Result<int, string> = Err("initial");
    res = get_value();
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func getValue() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](42)
}

func test() {
	lisette.MakeResultErr[int, string]("initial")
	getValue()
}
