tests/spec/emit/snapshots/result_assignment_with_err.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() {
    let mut res: Result<int, string> = Ok(1);
    res = Err("error");
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	lisette.MakeResultOk[int, string](1)
	lisette.MakeResultErr[int, string]("error")
}
