tests/spec/emit/snapshots/result_constructor_as_argument_no_binding.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn describe(r: Result<int, string>) -> string {
    match r { Ok(v) => f"{v}", Err(e) => e }
  }
  
  fn test() -> string {
    describe(Ok(42))
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func describe(r lisette.Result[int, string]) string {
	if r.Tag == lisette.ResultOk {
		return fmt.Sprint(r.OkVal)
	}
	return r.ErrVal
}

func test() string {
	return describe(lisette.MakeResultOk[int, string](42))
}
