tests/spec/emit/snapshots/result_different_error_types.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test_string_error() -> Result<int, string> {
    Ok(42)
  }
  
  fn test_int_error() -> Result<string, int> {
    Ok("hello")
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func testStringError() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](42)
}

func testIntError() lisette.Result[string, int] {
	return lisette.MakeResultOk[string, int]("hello")
}
