tests/spec/emit/snapshots/result_direct_as_argument.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: "input: \nfn divide(a: int, b: int) -> Result<int, string> {\n  if b == 0 { Err(\"division by zero\") } else { Ok(a / b) }\n}\n\nfn describe(r: Result<int, string>) -> string {\n  match r { Ok(v) => f\"{v}\", Err(e) => e }\n}\n\nfn test() -> string {\n  describe(divide(10, 2))\n}\n"
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func divide(a, b int) lisette.Result[int, string] {
	var tmp_1 lisette.Result[int, string]
	if b == 0 {
		tmp_1 = lisette.MakeResultErr[int, string]("division by zero")
	} else {
		tmp_1 = lisette.MakeResultOk[int, string](a / b)
	}
	return tmp_1
}

func describe(r lisette.Result[int, string]) string {
	if r.Tag == lisette.ResultOk {
		v := r.OkVal
		return fmt.Sprint(v)
	}
	return r.ErrVal
}

func test() string {
	return describe(divide(10, 2))
}
