tests/spec/emit/snapshots/result_err_construction.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Result<int, string> {
    Err("error")
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Result[int, string] {
	return lisette.MakeResultErr[int, string]("error")
}
