tests/spec/emit/snapshots/result_err_with_interface_error_type.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  struct MyError { msg: string }
  
  impl MyError {
    fn Error(self) -> string { self.msg }
  }
  
  fn might_fail() -> Result<int, error> {
    Err(MyError { msg: "oops" })
  }
---
package main

type MyError struct {
	msg string
}

func (m MyError) Error() string {
	return m.msg
}

func mightFail() (int, error) {
	return 0, MyError{msg: "oops"}
}
