tests/spec/emit/snapshots/result_err_with_value_propagation.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn fallible() -> Result<int, string> {
    Err("something went wrong")
  }
  
  fn process() -> Result<int, string> {
    let x = fallible()?;
    Ok(x)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func fallible() lisette.Result[int, string] {
	return lisette.MakeResultErr[int, string]("something went wrong")
}

func process() lisette.Result[int, string] {
	check_1 := fallible()
	if check_1.Tag != lisette.ResultOk {
		return check_1
	}
	x := check_1.OkVal
	return lisette.MakeResultOk[int, string](x)
}
